Initial repair of simultaneous moves